fix: send asset add history

--- a/extension/index.html
+++ b/extension/index.html
@@ -1017,11 +1017,12 @@
 				<h2>Add this contact to address book?</h2>
 
 				<div class="add-form-confirmation">
-
 					<h3 class="warning">Add <span id="asset-add-confirmation-name"></span></h3>
-
 				</div>
 
+				<div>
+					<input placeholder="Note" id="token-add-contact-note" type="text">
+				</div>
 			</div>
 
 		</div>
