--- a/extension/index.html
+++ b/extension/index.html
@@ -653,10 +653,16 @@
 						</button>
 						 -->
 
-						<button class="button morepage" id="search-pools">
-							<h1>Search More Assets</h1>
+						 <button class="button morepage" id="search-tokens">
+							<h1>Search More Tokens</h1>
 							<h2>
-								Searches for any asset you may have and adds it to your asset list
+								Searches for tokens you may have and adds it to your asset list
+							</h2>
+						</button>
+						<button class="button morepage" id="search-pools">
+							<h1>Search Staking Pools</h1>
+							<h2>
+								Searches in the staking pools for any stake you may have and adds it to your asset list
 							</h2>
 						</button>
 						<button class="button morepage" id="explore">
